Finished App For 1v1 Connect 3
So far i decided to  stop the app development. Now it's possible to play
1v1, but not against the Computer. This functionality will be
implemented later.
1 - Setted Up the winning conditions and the winner result
2 - Setted Up the draw conditions
3 - Setted Up the Play Again function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Connect3</string>
     <string name="blue">Blue Image</string>
+    <string name="playAgain">Play Again</string>
 </resources>
